// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ArcSlider Background color 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ hXFQZg"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-giIncl goebzz"
    >
      <svg
        className="sc-iJuUWI bcnAiH"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "grab",
          }
        }
        viewBox="0 0 600 600"
      >
        <defs>
          <linearGradient
            id="rendition-arc-slider-gradient"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="0%"
          >
            <stop
              offset="0%"
              stopColor="hsl(46.30000000000001, 100%, 39.8%)"
            />
            <stop
              offset="100%"
              stopColor="#FEC400"
            />
          </linearGradient>
          <filter
            height="130%"
            id="rendition-arc-slider-dropshadow"
            xmlns="http://www.w3.org/2000/svg"
          >
            <feGaussianBlur
              in="SourceAlpha"
              stdDeviation="1.25"
            />
            <feOffset
              dx="0"
              dy="0"
              result="offsetblur"
            />
            <feMerge>
              <feMergeNode />
              <feMergeNode
                in="SourceGraphic"
              />
            </feMerge>
          </filter>
        </defs>
        <path
          d="M 441.4213562373095 441.4213562373095 A 200 200 0 1 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="#ff0000"
          strokeLinecap="round"
          strokeWidth="20.5"
        />
        <path
          d="M 158.57864376269046 441.4213562373095 A 200 200 0 0 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="url(#rendition-arc-slider-gradient)"
          strokeLinecap="round"
          strokeWidth="22"
        />
        <circle
          cx="300"
          cy="100"
          fill="white"
          filter="url(#rendition-arc-slider-dropshadow)"
          r="20"
          transform="rotate(-135, 300, 300)"
        />
        <circle
          cx="300"
          cy="100"
          fill="#FEC400"
          r="14"
          transform="rotate(-135, 300, 300)"
        />
      </svg>
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-ezrdKe jaRprB cKjTfb"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ArcSlider Change handler 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ hXFQZg"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-giIncl goebzz"
      value={0.6}
    >
      <svg
        className="sc-iJuUWI bcnAiH"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "grab",
          }
        }
        viewBox="0 0 600 600"
      >
        <defs>
          <linearGradient
            id="rendition-arc-slider-gradient"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="0%"
          >
            <stop
              offset="0%"
              stopColor="hsl(46.30000000000001, 100%, 39.8%)"
            />
            <stop
              offset="100%"
              stopColor="#FEC400"
            />
          </linearGradient>
          <filter
            height="130%"
            id="rendition-arc-slider-dropshadow"
            xmlns="http://www.w3.org/2000/svg"
          >
            <feGaussianBlur
              in="SourceAlpha"
              stdDeviation="1.25"
            />
            <feOffset
              dx="0"
              dy="0"
              result="offsetblur"
            />
            <feMerge>
              <feMergeNode />
              <feMergeNode
                in="SourceGraphic"
              />
            </feMerge>
          </filter>
        </defs>
        <path
          d="M 441.4213562373095 441.4213562373095 A 200 200 0 1 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="#707274"
          strokeLinecap="round"
          strokeWidth="20.5"
        />
        <path
          d="M 390.79809994790935 121.79869516232645 A 200 200 0 0 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="url(#rendition-arc-slider-gradient)"
          strokeLinecap="round"
          strokeWidth="22"
        />
        <circle
          cx="300"
          cy="100"
          fill="white"
          filter="url(#rendition-arc-slider-dropshadow)"
          r="20"
          transform="rotate(27, 300, 300)"
        />
        <circle
          cx="300"
          cy="100"
          fill="#FEC400"
          r="14"
          transform="rotate(27, 300, 300)"
        />
      </svg>
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-ezrdKe jaRprB cKjTfb"
      >
        <h2>
          60
          %
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ArcSlider Fill color 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ hXFQZg"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-giIncl goebzz"
    >
      <svg
        className="sc-iJuUWI bcnAiH"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "grab",
          }
        }
        viewBox="0 0 600 600"
      >
        <defs>
          <linearGradient
            id="rendition-arc-slider-gradient"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="0%"
          >
            <stop
              offset="0%"
              stopColor="hsl(0, 100%, 40%)"
            />
            <stop
              offset="100%"
              stopColor="#ff0000"
            />
          </linearGradient>
          <filter
            height="130%"
            id="rendition-arc-slider-dropshadow"
            xmlns="http://www.w3.org/2000/svg"
          >
            <feGaussianBlur
              in="SourceAlpha"
              stdDeviation="1.25"
            />
            <feOffset
              dx="0"
              dy="0"
              result="offsetblur"
            />
            <feMerge>
              <feMergeNode />
              <feMergeNode
                in="SourceGraphic"
              />
            </feMerge>
          </filter>
        </defs>
        <path
          d="M 441.4213562373095 441.4213562373095 A 200 200 0 1 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="#707274"
          strokeLinecap="round"
          strokeWidth="20.5"
        />
        <path
          d="M 158.57864376269046 441.4213562373095 A 200 200 0 0 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="url(#rendition-arc-slider-gradient)"
          strokeLinecap="round"
          strokeWidth="22"
        />
        <circle
          cx="300"
          cy="100"
          fill="white"
          filter="url(#rendition-arc-slider-dropshadow)"
          r="20"
          transform="rotate(-135, 300, 300)"
        />
        <circle
          cx="300"
          cy="100"
          fill="#ff0000"
          r="14"
          transform="rotate(-135, 300, 300)"
        />
      </svg>
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-ezrdKe jaRprB cKjTfb"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ArcSlider Label 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ hXFQZg"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-giIncl goebzz"
    >
      <svg
        className="sc-iJuUWI bcnAiH"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "grab",
          }
        }
        viewBox="0 0 600 600"
      >
        <defs>
          <linearGradient
            id="rendition-arc-slider-gradient"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="0%"
          >
            <stop
              offset="0%"
              stopColor="hsl(46.30000000000001, 100%, 39.8%)"
            />
            <stop
              offset="100%"
              stopColor="#FEC400"
            />
          </linearGradient>
          <filter
            height="130%"
            id="rendition-arc-slider-dropshadow"
            xmlns="http://www.w3.org/2000/svg"
          >
            <feGaussianBlur
              in="SourceAlpha"
              stdDeviation="1.25"
            />
            <feOffset
              dx="0"
              dy="0"
              result="offsetblur"
            />
            <feMerge>
              <feMergeNode />
              <feMergeNode
                in="SourceGraphic"
              />
            </feMerge>
          </filter>
        </defs>
        <path
          d="M 441.4213562373095 441.4213562373095 A 200 200 0 1 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="#707274"
          strokeLinecap="round"
          strokeWidth="20.5"
        />
        <path
          d="M 158.57864376269046 441.4213562373095 A 200 200 0 0 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="url(#rendition-arc-slider-gradient)"
          strokeLinecap="round"
          strokeWidth="22"
        />
        <circle
          cx="300"
          cy="100"
          fill="white"
          filter="url(#rendition-arc-slider-dropshadow)"
          r="20"
          transform="rotate(-135, 300, 300)"
        />
        <circle
          cx="300"
          cy="100"
          fill="#FEC400"
          r="14"
          transform="rotate(-135, 300, 300)"
        />
      </svg>
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-ezrdKe jaRprB cKjTfb"
      >
        <h2>
          A label
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ArcSlider Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ hXFQZg"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-giIncl goebzz"
    >
      <svg
        className="sc-iJuUWI bcnAiH"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "grab",
          }
        }
        viewBox="0 0 600 600"
      >
        <defs>
          <linearGradient
            id="rendition-arc-slider-gradient"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="0%"
          >
            <stop
              offset="0%"
              stopColor="hsl(46.30000000000001, 100%, 39.8%)"
            />
            <stop
              offset="100%"
              stopColor="#FEC400"
            />
          </linearGradient>
          <filter
            height="130%"
            id="rendition-arc-slider-dropshadow"
            xmlns="http://www.w3.org/2000/svg"
          >
            <feGaussianBlur
              in="SourceAlpha"
              stdDeviation="1.25"
            />
            <feOffset
              dx="0"
              dy="0"
              result="offsetblur"
            />
            <feMerge>
              <feMergeNode />
              <feMergeNode
                in="SourceGraphic"
              />
            </feMerge>
          </filter>
        </defs>
        <path
          d="M 441.4213562373095 441.4213562373095 A 200 200 0 1 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="#707274"
          strokeLinecap="round"
          strokeWidth="20.5"
        />
        <path
          d="M 158.57864376269046 441.4213562373095 A 200 200 0 0 0 158.57864376269046 441.4213562373095"
          fill="none"
          stroke="url(#rendition-arc-slider-gradient)"
          strokeLinecap="round"
          strokeWidth="22"
        />
        <circle
          cx="300"
          cy="100"
          fill="white"
          filter="url(#rendition-arc-slider-dropshadow)"
          r="20"
          transform="rotate(-135, 300, 300)"
        />
        <circle
          cx="300"
          cy="100"
          fill="#FEC400"
          r="14"
          transform="rotate(-135, 300, 300)"
        />
      </svg>
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-ezrdKe jaRprB cKjTfb"
      />
    </div>
  </div>
</div>
`;
